--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="gi.js"></script>
     <style>
       p {
         font-size: 2rem;
@@ -15,6 +14,7 @@
     </style>
   </head>
   <body>
+    <script src="gi.js"></script>git 
     <h1>Medium Challenge</h1>
     <button onclick="checkTone()">Try it</button>
     <p id="checked"></p>
