--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     </style>
   </head>
   <body>
-    <script src="gi.js"></script>git 
+    <script src="gi.js"></script>
+
     <h1>Medium Challenge</h1>
     <button onclick="checkTone()">Try it</button>
     <p id="checked"></p>
 
     <h2>Hard Challenge</h2>
     <button onclick="calculator()">My Calculator</button>
-    <p id="calculator">Results:</p>
+    <p id="calculator">Results</p>
+
   </body>
 </html>
