--- a/index.html
+++ b/index.html
@@ -14,15 +14,10 @@
     </style>
   </head>
   <body>
-    <script src="gi.js"></script>
+    <script src="week-2-gi.js"></script>
 
-    <h1>Medium Challenge</h1>
-    <button onclick="checkTone()">Try it</button>
-    <p id="checked"></p>
-
-    <h2>Hard Challenge</h2>
-    <button onclick="calculator()">My Calculator</button>
-    <p id="calculator">Results</p>
-
+    <h2>Medium Challenge</h2>
+    <button onclick="findMonth()">My Calendar</button>
+    <p id="month">Results</p>
   </body>
 </html>
